--- a/projects/proj_template.qmd
+++ b/projects/proj_template.qmd
@@ -6,7 +6,7 @@ date: 2024-03-07
 categories: ["Machine Learning", "Statistics"]
 tags: ["Compution Vision", "Annotation"]
 author: "Sung Woo Bak"
-draft: false
+draft: true
 image: "../img/barplot.png"
 layout: "article"
 toc: true
