--- a/notes/git.qmd
+++ b/notes/git.qmd
@@ -4,7 +4,7 @@ subtitle: "Git Commands & GitHub Workflow"
 description: "A quick reference to essential Git commands and workflows"
 date: 2024-03-07
 categories: ["Git"]
-tags: ["Git"]
+tags: ["Git", "GitHub","SSH"]
 author: "Sung Woo Bak"
 draft: false
 image: "../img/github-mark.png"
@@ -13,3 +13,4 @@ toc: true
 slug: "git-cheatsheet"
 keywords: ["Git", "GitHub", "SSH"]
 ---
+
