--- a/notes/note_template.qmd
+++ b/notes/note_template.qmd
@@ -8,6 +8,7 @@ tags: ["Compution Vision", "Annotation"]
 author: "Sung Woo Bak"
 draft: true
 image: "../img/barplot.png"
+image-height: "200px"
 layout: "article"
 toc: true
 slug: "template"
