--- a/notes/python.qmd
+++ b/notes/python.qmd
@@ -7,6 +7,7 @@ categories: ["Python"]
 author: "Sung Woo Bak"
 draft: false
 image: "../img/python.png"
+image-height: "200px"
 layout: "article"
 toc: true
 ---
