--- a/projects/geospatial.qmd
+++ b/projects/geospatial.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Sea Ice Concentration and Animal Telemetry"
 subtitle: "Geospatial Data Analysis"
-description: "This project provides visual information on sea ice concentration and compares it with animal telemetry data to demonstrate the relationship between them."
+description: "Analysis of Sea Ice Concentration and Animal Telemetry in the South Pole Region"
 date: 2024-09-10
 categories: ["Statistics", "Python"]
 tags: ["Remote Sensing", "Geospatial"]
