--- a/project.qmd
+++ b/project.qmd
@@ -10,3 +10,5 @@ listing:
   sort-ui: [title, date]
   filter-ui: [title, date]
 ---
+
+Here, I’ll be posting projects I’ve worked on, along with brief overviews.
