--- a/projects/hp.qmd
+++ b/projects/hp.qmd
@@ -12,6 +12,6 @@ toc: true
 keywords: ["Computer Vision", "Annotation"]
 ---
 
-This project is currently in progress.
+This project is currently **in progress**.
 
-The objective is to develop automated tools that extract insights from street-level imagery. The initial focus will be the improvement of planning information for climate-related disaster risk reduction in urban areas. This project will establish a foundation for future plans to transition into post-disaster impact assessments.
+The **objective** is to develop automated tools that extract insights from street-level imagery. The initial focus will be the improvement of planning information for climate-related disaster risk reduction in urban areas. This project will establish a foundation for future plans to transition into post-disaster impact assessments.
