--- a/projects/seaice.qmd
+++ b/projects/seaice.qmd
@@ -537,4 +537,5 @@ plt.show()
 ```
 As shown above, ADPE24 has data from January to March 2003, and it traveled from the island towards areas with higher sea ice concentrations. The sea ice concentration varies by month, and it is clear that ADPE24 follows these changes. Although this is just one sample, it suggests that there is a relationship between sea ice and penguin movement patterns.
 
-Note: To ensure safety during publishing, limited data was used, displaying just a single sample.
+
+Modified: Oct 10, 2024.
