--- a/notes/annotation.qmd
+++ b/notes/annotation.qmd
@@ -3,7 +3,7 @@ title: "Image Labeling"
 subtitle: "Tips for Labeling Images"
 description: "Essential tips and best practices for efficient image labeling for training object detector"
 date: 2024-10-08
-categories: ["Machine Learning"]
+categories: ["Machine Learning", "Computer Vision"]
 tags: ["Compution Vision"]
 author: "Sung Woo Bak"
 draft: false
